--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^5.9.1",
+    "@stripe/stripe-js": "^1.46.0",
+    "gatsby": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^6.6.0",
+    "gatsby-source-stripe": "^4.0.0",
+    "node":"19.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "use-shopping-cart": "^3.1.4"
   },
   "repository": {
     "type": "git",
